# leave-bot

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/adapters/: llm.py  slack.py  storage.py  workflow.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/schemas/: leave.py
app/services/: balances.py  dates.py  employee_sync.py  job_handlers.py  jobs.py  leave_requests.py  permissions.py  policy.py
config/: leave_policy.json  manager_mapping.sample.csv
deployment/agentspan/: Dockerfile
deployment/api/: Dockerfile
docs/: data-flow-diagram.md  document-integration.md  foundation-decisions.md  railway-deployment.md  remaining-decisions.md  slack-live-test.md  slack-permissions.md
migrations/: env.py
migrations/versions/: 20260713_0001_initial_schema.py
prototype/: index.html
scripts/: start-local-agentspan.ps1  verify_agentspan.py
tests/: test_durability.py  test_leave_foundation.py
